[package]
name = "todo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0"
anyhow = "1.0"
home = "0.5.3"
colored = "2.0"

[dependencies.clap]
features = ["derive"]
version = "3.1"

[dependencies.chrono]
features = ["serde"] # to serialize the DateTime field.
version = "0.4"

[dependencies.serde]
features = ["derive"] # to derive the Serialize/Deserialize trait.
version = "1.0"
